<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation"> <!-- Fixes lint error -->
    <string name="app_name">Experiments</string>
    <string name="fcm_notification_channel_id" translatable="false">fcm_channel</string>
    <string name="fcm_notification_channel_name" translatable="true">FCM</string>
    <string name="fcm_notification_channel_description" translatable="true">FCM Notif Channel Description</string>
    <string name="sms_notification_channel_id" translatable="false">sms_channel</string>
    <string name="sms_notification_channel_name" translatable="true">SMS</string>
    <string name="sms_notification_channel_description" translatable="true">SMS detection</string>
    <string name="sms_notification_title">SMS Detected</string>
    <string name="sms_notification_text">New SMS detected!</string>
    <string name="static_shortcut_label_short">label_short</string>
    <string name="static_shortcut_label_long">label_long</string>
    <string name="static_shortcut_disabled_message">disabled_message</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="amount_format_example">R %.2f</string>
    <string name="yellow_star">Yellow star</string>
    <string name="green_question_mark">Green Question Mark</string>
    <string name="main_screen_title">Experiments</string>
    <string name="transaction_screen_title">Transaction</string>
    <string name="compose_examples_menu_item">Compose Examples</string>
    <string name="compose_playground_screen_title">Compose Playground</string>
    <string name="compose_tutorial_screen_title">Compose Tutorial</string>
    <string name="compose_basics_screen_title">Compose Basics</string>
    <string name="compose_txn_menu_item">Transactions (Compose)</string>
    <string name="legacy_txn_menu_item">Transactions (Legacy)</string>
    <string name="about_screen_title">About</string>
    <string name="about_menu_item">About</string>
    <string name="about_text">Experiments is an app for experiments.</string>
    <string name="share">Share</string>
    <string name="android_experiments_menu_item">Experiments</string>
    <string name="android_view_model_menu_item">AndroidViewModel</string>
    <string name="android_view_model_screen_title">AndroidViewModel</string>
    <string name="android_view_model_text">Hello Android View Model</string>
    <string name="auth_menu_item">Auth</string>
    <string name="auth_screen_title">Authentication</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="settings_button_text">Settings</string>
    <string name="welcome_message">Welcome</string>
    <string name="welcome_message_authed">%1$s %2$s!</string>
    <string name="settings_screen_title">Settings</string>
    <string name="settings_welcome_type_title">Welcome Type</string>
    <string name="login_screen_title">Login</string>
    <string name="login_text">Please login to access this feature</string>
    <string name="map_screen_title">Map</string>
    <string name="map_menu_item">Map</string>
    <string name="dropped_pin">Dropped Pin</string>

    <string name="property_animation_screen_title">Property Animation</string>
    <string name="property_animation_menu_item">Property Animation</string>

    <string name="credits">Virginia P @ Google</string>
    <string name="motion_click_screen_title">Motion Click</string>
    <string name="motion_click_menu_item">Motion Click</string>
    <string name="swipe_towards_the_right">Swipe towards the right</string>
    <string name="motion_drag_screen_title">Motion Drag</string>
    <string name="motion_drag_menu_item">Motion Drag</string>
    <string name="motion_toolbar_screen_title">Motion Toolbar</string>
    <string name="motion_toolbar_menu_item">Motion Toolbar</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum id venenatis a. Est placerat in egestas erat imperdiet sed. Ut lectus arcu bibendum at varius. Purus in mollis nunc sed id semper risus in hendrerit. Volutpat est velit egestas dui. Id diam vel quam elementum pulvinar etiam non. Tristique magna sit amet purus gravida quis blandit. Gravida in fermentum et sollicitudin ac orci. Sed augue lacus viverra vitae congue eu. Sapien nec sagittis aliquam malesuada bibendum. Tortor aliquam nulla facilisi cras fermentum odio. Egestas sed tempus urna et pharetra pharetra massa. Amet purus gravida quis blandit. Orci a scelerisque purus semper eget duis at tellus.

    Volutpat lacus laoreet non curabitur. Urna cursus eget nunc scelerisque viverra mauris. Turpis massa sed elementum tempus egestas sed sed risus pretium. Quam nulla porttitor massa id neque aliquam. Tempus quam pellentesque nec nam aliquam sem et. Ut eu sem integer vitae justo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Cras fermentum odio eu feugiat pretium nibh ipsum. Posuere morbi leo urna molestie at elementum eu facilisis sed. Augue eget arcu dictum varius duis at. Lacinia at quis risus sed vulputate odio. Massa tincidunt dui ut ornare.

    Auctor augue mauris augue neque gravida in fermentum et. Varius vel pharetra vel turpis nunc eget. Condimentum mattis pellentesque id nibh tortor id aliquet. In massa tempor nec feugiat nisl pretium fusce. Dolor sed viverra ipsum nunc aliquet bibendum. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed. Mauris a diam maecenas sed. Tortor aliquam nulla facilisi cras fermentum. Mattis rhoncus urna neque viverra. Dui sapien eget mi proin sed. In dictum non consectetur a. Eu consequat ac felis donec et odio pellentesque. Eget egestas purus viverra accumsan in nisl. Dui nunc mattis enim ut tellus elementum. Lobortis elementum nibh tellus molestie nunc non. Nisi porta lorem mollis aliquam ut porttitor leo a diam. Pulvinar mattis nunc sed blandit libero volutpat sed. Ut faucibus pulvinar elementum integer.

    Scelerisque varius morbi enim nunc faucibus a pellentesque. Scelerisque in dictum non consectetur a erat nam at lectus. Sed euismod nisi porta lorem mollis aliquam. Nunc mi ipsum faucibus vitae aliquet. Nibh cras pulvinar mattis nunc. Sed viverra tellus in hac habitasse platea. Ac tortor vitae purus faucibus ornare. Laoreet sit amet cursus sit amet dictum sit amet. Risus sed vulputate odio ut enim. Massa sapien faucibus et molestie ac feugiat sed. Proin libero nunc consequat interdum varius sit amet mattis vulputate. Eget sit amet tellus cras adipiscing enim eu. Ullamcorper dignissim cras tincidunt lobortis feugiat. Arcu ac tortor dignissim convallis aenean et tortor at. Aliquet risus feugiat in ante metus. Sit amet luctus venenatis lectus magna. Egestas maecenas pharetra convallis posuere morbi leo. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem.

        Ac orci phasellus egestas tellus rutrum tellus. Ultrices neque ornare aenean euismod elementum nisi quis. Vel pharetra vel turpis nunc eget. Quis lectus nulla at volutpat diam ut venenatis tellus in. Egestas congue quisque egestas diam in arcu. Tincidunt praesent semper feugiat nibh sed pulvinar. Tristique senectus et netus et malesuada fames. Tristique nulla aliquet enim tortor. Aliquet nibh praesent tristique magna sit amet purus. Diam maecenas ultricies mi eget mauris pharetra et ultrices neque. Morbi tristique senectus et netus et malesuada. Venenatis tellus in metus vulputate eu scelerisque felis. Risus pretium quam vulputate dignissim suspendisse in. Ut venenatis tellus in metus vulputate. Turpis in eu mi bibendum. Pellentesque elit eget gravida cum sociis natoque. Tristique risus nec feugiat in fermentum posuere urna. Senectus et netus et malesuada fames ac turpis.</string>

    <!-- Map menu items -->
    <string name="normal_map_menu_item">Normal Map</string>
    <string name="hybrid_map_menu_item">Hybrid Map</string>
    <string name="satellite_map_menu_item">Satellite Map</string>
    <string name="terrain_map_menu_item">Terrain Map</string>

    <!-- Welcome Types -->
    <string name="welcome_type_hi">Hi</string>
    <string name="welcome_type_hello">Hello</string>

    <!-- Shared Preference Keys -->
    <string name="preference_welcome_type_key">welcome_type_pref</string>

    <string name="show_less">Show less</string>
    <string name="show_more">Show mess</string>
</resources>
