...
    <item
        android:id="@+id/compose_txn_list_fragment"
        android:icon="@drawable/android"
        android:title="@string/compose_txn_menu_item" />

    <item
        android:id="@+id/legacy_txn_list_fragment"
        android:icon="@drawable/android"
        android:title="@string/legacy_txn_menu_item" />

    <item
        android:id="@+id/my_android_view_model_fragment"
        android:icon="@drawable/android"
...
